--- a/Spring-MVC-blog/src/main/resources/application.properties
+++ b/Spring-MVC-blog/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.thymeleaf.cache = false
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost/blog_db?characterEncoding=utf8
 spring.datasource.username = root
-spring.datasource.password =
+spring.datasource.password = 6262386wsW
 
 # Configure Hibernate DDL mode: create / update
 spring.jpa.properties.hibernate.hbm2ddl.auto = create
